# Privexec

./: .gitmodules  CMakeLists.txt
.github/workflows/: ci.yml
AppExec/: CMakeLists.txt
Privexec/: CMakeLists.txt  app.hpp
include/: capabilities.hpp
lib/exec/: appcontainer.cc
tools/: capabilities.txt
wsudo/: CMakeLists.txt  alias.hpp  env.hpp
